Updated the writing portions

--- a/Piece_1.html
+++ b/Piece_1.html
@@ -374,10 +374,10 @@ together).</p>
 <h3>Data Being Used</h3>
 <p>Several different variables were used for the following analyses.
 Alongside Family Decision Making (FDM), Age (AgeCM), Socio-economic
-Status (SES), Gender (ChGender), and Country of origin were used to help
-identify potential trends in the data. Below are the countries utilized
-in this dataset. For now, I will only be working with people from the
-United States.</p>
+Status (SES), Gender (ChGender), and Country of origin (Country) were
+used to help identify potential trends in the data. Below are the
+countries utilized in this dataset. For now, I will only be working with
+people from the United States.</p>
 <pre class="r"><code>levels(data$Country)</code></pre>
 <pre><code>##  [1] &quot;USA-Hispanic&quot;          &quot;China-Jinan&quot;           &quot;China-Shanghai&quot;       
 ##  [4] &quot;Italy-Naples&quot;          &quot;Italy-Rome&quot;            &quot;Kenya&quot;                
